--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-concat": "^2.5.2",
+    "gulp-connect-php": "0.0.5",
     "gulp-jshint": "^1.9.2",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^0.5.1",
@@ -16,6 +17,7 @@
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.1.0",
     "gulp-usemin": "^0.3.11",
+    "jshint-stylish": "^1.0.1",
     "wiredep": "^2.2.2"
   }
 }
