--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,17 @@
-node_modules/
-bower_components/
+node_modules
+bower_components
 *.log
 .DS_Store
+.sass-cache
+
+public/content
+public/thumbs
+public/site/accounts
+public/site/cache
+public/assets/images
+public/assets/scripts
+public/assets/styles
+public/assets/avatars
+
+gulpfile.js/config.js
+source/vendor/modernizr.js
