--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "main": "gulpfile.js",
   "author": "",
   "devDependencies": {
+    "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-concat": "^2.5.2",
     "gulp-connect-php": "0.0.5",
+    "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.9.2",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^0.5.1",
+    "gulp-modernizr": "^1.0.0-alpha",
     "gulp-rename": "^1.2.0",
-    "gulp-rev": "^3.0.1",
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.1.0",
-    "gulp-usemin": "^0.3.11",
+    "imagemin-pngquant": "^4.0.0",
     "jshint-stylish": "^1.0.1",
+    "require-dir": "^0.1.0",
     "wiredep": "^2.2.2"
   }
 }
