--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^0.5.1",
     "gulp-modernizr": "^1.0.0-alpha",
+    "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.1.0",
