--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-autoprefixer": "^2.1.0",
     "gulp-concat": "^2.5.2",
     "gulp-connect-php": "0.0.5",
+    "gulp-download": "0.0.1",
     "gulp-imagemin": "^2.2.1",
     "gulp-jshint": "^1.9.2",
     "gulp-livereload": "^3.8.0",
@@ -19,9 +20,11 @@
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
     "gulp-uglify": "^1.1.0",
+    "gulp-unzip": "^0.1.3",
     "imagemin-pngquant": "^4.0.0",
     "jshint-stylish": "^1.0.1",
     "require-dir": "^0.1.0",
+    "run-sequence": "^1.1.2",
     "wiredep": "^2.2.2"
   }
 }
