--- a/package.json
+++ b/package.json
@@ -5,26 +5,26 @@
   "main": "gulpfile.js",
   "author": "",
   "devDependencies": {
-    "del": "^1.1.1",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-concat": "^2.5.2",
-    "gulp-connect-php": "0.0.5",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect-php": "0.0.7",
     "gulp-download": "0.0.1",
-    "gulp-imagemin": "^2.2.1",
-    "gulp-jshint": "^1.9.2",
-    "gulp-livereload": "^3.8.0",
-    "gulp-minify-css": "^0.5.1",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-jshint": "^2.0.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.2",
     "gulp-modernizr": "^1.0.0-alpha",
     "gulp-plumber": "^1.0.1",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4",
-    "gulp-uglify": "^1.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.1.1",
+    "gulp-uglify": "^1.5.1",
     "gulp-unzip": "^0.1.3",
-    "imagemin-pngquant": "^4.0.0",
-    "jshint-stylish": "^1.0.1",
-    "require-dir": "^0.1.0",
-    "run-sequence": "^1.1.2",
-    "wiredep": "^2.2.2"
+    "imagemin-pngquant": "^4.2.0",
+    "jshint-stylish": "^2.1.0",
+    "require-dir": "^0.3.0",
+    "run-sequence": "^1.1.5",
+    "wiredep": "^3.0.0-beta"
   }
 }
