--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "KirbyApp",
+  "name": "NOS: The Series",
   "version": "0.0.0",
   "description": "",
   "main": "gulpfile.js",
-  "author": "",
+  "author": "Yoeran Luteijn <contact@yoeran.nl>",
   "devDependencies": {
+    "browser-sync": "^2.13.0",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-concat": "^2.6.0",
+    "gulp-changed": "^1.3.1",
     "gulp-connect-php": "0.0.7",
-    "gulp-download": "0.0.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-imagemin": "^2.4.0",
-    "gulp-jshint": "^2.0.0",
-    "gulp-livereload": "^3.8.1",
     "gulp-minify-css": "^1.2.2",
     "gulp-modernizr": "^1.0.0-alpha",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
-    "gulp-uglify": "^1.5.1",
-    "gulp-unzip": "^0.1.3",
+    "gulp-uglify": "^2.0.0",
+    "gulp-watch": "^4.3.8",
+    "gulp-webp": "^2.3.0",
     "imagemin-pngquant": "^4.2.0",
-    "jshint-stylish": "^2.1.0",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
-    "wiredep": "^3.0.0-beta"
-  }
+    "ts-loader": "^0.8.2",
+    "typescript": "^1.8.10",
+    "webpack": "^1.13.1",
+    "webpack-stream": "^3.2.0"
+  },
+  "dependencies": {}
 }
