Replace gulp-minify-css with gulp-clean-css

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-changed": "^1.3.1",
+    "gulp-clean-css": "^2.0.12",
     "gulp-connect-php": "0.0.7",
     "gulp-eslint": "^3.0.1",
     "gulp-imagemin": "^2.4.0",
-    "gulp-minify-css": "^1.2.2",
     "gulp-modernizr": "^1.0.0-alpha",
     "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
